@@ -2,3 +2,11 @@ CREATE DATABASE meteo_db_test
 WITH OWNER = meteo_user
 ENCODING = 'UTF8'
 TEMPLATE template0;
+
+CREATE DATABASE meteo_db
+WITH OWNER = meteo_user
+ENCODING = 'UTF8'
+TEMPLATE template0;
+
+CREATE SCHEMA IF NOT EXISTS raw ;
+CREATE SCHEMA IF NOT EXISTS marts;
